fixed msg 1 audio

--- a/client/partials/timer.html
+++ b/client/partials/timer.html
@@ -37,7 +37,7 @@
                     </div>
     
                     <div class="col-xs-2 col-xs-offset-7">
-                        <input id="firstbtn" class="btn btn-secondary" type="button" value="MSG1" id="btn_msg1" />
+                        <input class="btn btn-secondary" type="button" value="MSG1" id="btn_msg1" />
                         <input class="btn btn-secondary" type="button" value="MSG2" id="btn_msg2" />
                     </div>    
                     
