fixed msg1 audio

--- a/client/partials/timera.html
+++ b/client/partials/timera.html
@@ -127,6 +127,7 @@
             })
 
             socket.on('playPWmsg2', function(data){
+                console.log("PLAY MSG 2");
                 pwmsg2.play();
             })
 
