--- a/client/partials/timer.html
+++ b/client/partials/timer.html
@@ -1,6 +1,11 @@
 <div ng-controller="timerController">
 	<div id="ringerbtn" class="row">
-        <div  class="col-xs-1 col-xs-offset-11">
+        <div class="col-xs-2">
+            <a class="roomlinks" href="#/timer">PW</a>
+            <a class="roomlinks" href="#/timeraods">ODS</a>
+        </div>
+        <div  class="col-xs-1 col-xs-offset-9">
+
             <input id="ringer" type="button" class="btn btn-secondary"/>
         </div>
     </div>
@@ -51,17 +56,16 @@
 </div>
 <script type="text/javascript">
         $(document).ready(function(){
-            // console.log($scope.user);
+
             var socket = io.connect();  
             var clock = $('.clock').FlipClock({countdown:true, autoStart:false, clockFace: 'MinuteCounter'
-                // setCountdown(true);
+
             })
             clock.setTime(3600);
 
             //SOCKET FUNCTIONS
             socket.on('checkClock', function(data){
-                // console.log(data.time);
-                // console.log(data.clockon);
+
                 clock.setTime(data.time);
                 if(data.clockon == true){
                     clock.start();
@@ -75,24 +79,19 @@
             });
 
             socket.on('startClock', function(data){
-                // if($('#cd_seconds').val() != 60){
-                //     pwba.currentTime = $('#cd_seconds').val()*60;
-                // }
-                // pwba.play();
-                clock.start(function(){
-                    // console.log(clock.getTime().time);
+
+                clock.start(function(){ 
                     socket.emit('updateTime', {time: clock.getTime().time})
-                    })
+                })
             })
 
             socket.on('stopClock', function(data){
-                // pwba.pause();
+
                 clock.stop();
             })
 
             socket.on('resetClock', function(data){
-                // pwba.pause();
-                // pwba.currentTime = 0;
+
                 clock.stop();
                 clock.setTime(3600);
                 $('#cd_seconds').val(60);
@@ -104,19 +103,15 @@
                 clock.setTime($('#cd_seconds').val()*60);
             })
 
-            // socket.on('playPWmsg1', function(data){
-            //     pwmsg1.play();
-            // })
 
             socket.on('volumeChange', function(data){
-                // pwba.volume = data;
+
                 $('#cd_volume').val(data * 100);
                 console.log(pwba.volume);
             })
 
-            // socket.on('playNotif', function(data){
-            //     notification.play();
-            // })
+
+            //jQuery FUNCTIONS
 
             $('#audio').on('click', function(){
                 console.log('clicked');
@@ -134,11 +129,6 @@
                 socket.emit('play_pwmsg2');
             })
 
-
-            // $('#hintbtn').on('click',function(){
-            //     console.log($('#hints').val())
-            //     socket.emit('new_hint', {hint: $('#hints').val()})
-            // })
 
             $('#cd_start').on('click',function(){
                 socket.emit('start_clock');
