--- a/client/partials/timeraods.html
+++ b/client/partials/timeraods.html
@@ -63,7 +63,7 @@
             var pwmsg2 = document.createElement('audio');
             pwmsg2.setAttribute('src', 'as2.m4a');
             var pwba = document.createElement('audio');
-            pwba.setAttribute('src', 'ods.mp4');
+            pwba.setAttribute('src', 'ods.wav');
             var notification = document.createElement('audio');
             notification.setAttribute('src', 'notif.mp3');
             var alarmEnd = document.createElement('audio');
