stopped background music once timer ended

--- a/client/partials/timera.html
+++ b/client/partials/timera.html
@@ -107,6 +107,7 @@
                 clock.start(function(){
                     socket.emit('updateTime', {time: clock.getTime().time})
                     if(clock.getTime().time == 0) {
+                        pwba.pause();
                         alarmEnd.play();
                     }
 
